# Device_Faker_English

./: .gitignore  Cargo.toml  translate_and_build.yml
.github/workflows/: build.yml
device_faker_cli/: Cargo.toml
device_faker_cli/src/: converter.rs  main.rs  template.rs
docs/: CONFIG.md
docs/en/: CONFIG.md
module/: config.toml
src/: companion.rs  config.rs  hooks.rs  lib.rs  state.rs
webui/: build_webui.py  components.d.ts  index.html  package-lock.json  package.json
webui/src/: App.vue  style.css
webui/src/components/: OnlineTemplateDialog.vue  OnlineTemplateLibraryView.vue  OnlineTemplateVirtualList.vue
webui/src/components/apps/: AppConfigDialog.vue  AppFilters.vue  AppsPageSkeleton.vue
webui/src/components/templates/: TemplateCard.vue  TemplateDialog.vue
webui/src/pages/: AppsPage.vue  TemplatePage.vue
webui/src/stores/: apps.ts  config.ts  settings.ts
webui/src/types/: index.ts
webui/src/utils/: config.ts  i18n.ts  ksu.ts  mockData.ts  onlineTemplates.ts  theme.ts
xtask/: Cargo.toml
xtask/src/: main.rs
