[workspace]
members = ["device_faker_cli", "xtask"]

[package]
name = "device_faker"
version = "1.3.0"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
jni = { version = "0.21.1", default-features = false }
log = { version = "^0.4", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
zygisk-api = { git = "https://github.com/Seyud/zygisk-api-rs.git" }
serde_json = "1.0.133"
libc = "0.2"

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.15.1"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
strip = true
codegen-units = 1
overflow-checks = false
