[workspace]
members = ["xtask"]
exclude = ["device_faker_cli"]

[package]
name = "device_faker"
version = "1.3.5"
edition = "2024"
authors = ["Seyud"]

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
jni = { version = "0.22", default-features = false }
log = { version = "^0.4", default-features = false }
serde = { version = "1.0.228", features = ["derive", "std"] }
toml = { version = "1.0", features = ["parse"] }
zygisk-api = { git = "https://github.com/Seyud/zygisk-api-rs.git" }
serde_json = "1.0.149"
libc = "0.2"
prop-rs-android = { git = "https://github.com/Kernel-SU/ksu_props.git", version = "0.1.0" }

[lib]
name = "zygisk"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.15.1"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
strip = true
codegen-units = 1
overflow-checks = false


